de.bht.fb6.s778455.bachelor/data/production/semantics/extraction/dresden_18_01_2014_language_1/KP_DB-Systemarchitektur/KP_DB-Systemarchitektur/Aufrufe__bzw_Ausgaben_bei_den_Testaufrufen/posting1.txt
ID: 2108
CREATION_DATETIME: 1372370400000
MODIFICATION_DATETIME: 1373320800000
TITLE: null
LANGUAGE: GERMAN
PARENT_POSTING_ID: 0
POSTING_TYPE: question
CONTENT:
Beim Ausführen des BitonicSorts ist mir aufgefallen, dass scheinbar LLVM Fehler bringt, zum Beispiel

```ruby

:1:16: error: unknown type name 'uint'; did you mean 'int'?

#define __llvm__ 1

               ^

:3:16: error: unknown type name 'uint'; did you mean 'int'?

#define __clang_major__ 3

               ^

:4:25: error: unknown type name 'uint'; did you mean 'int'?

#define __clang_minor__ 2

                        ^

...

```

In dem Falle bin ich mir grad nicht sicher, ob die Fehler an mir, bzw meinem Code liegen, denn beispielsweise uint sollte OpenCL ja normalerweise bekannt sein. 
TAGGED_CONTENT:
